# veplayer

./: CMakeLists.txt  glad.c  main.cpp
lib/glad/include/glad/: glad.h
lib/libffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib/soil/lib/: libSOIL.0.1.dylib
src/: CMakeLists.txt  VEAVsync.h  VEAudioDecoder.cpp  VEAudioDecoder.h  VEAudioRender.h  VEDemux.cpp  VEDemux.h  VEFrame.h  VEFrameQueue.cpp  VEFrameQueue.h  VEMediaDef.h  VEPacket.h  VEPacketQueue.cpp  VEPacketQueue.h  VEPlayer.cpp  VEPlayer.h  VEPlayerContext.h  VEResult.h  VEVideoDecoder.cpp  VEVideoDecoder.h  VEVideoRender.h
src/utils/: VEThreadPool.h
